# reflection

./: :w  Cargo.toml
src/: main.rs
src/authentication/: mod.rs
src/authentication/callback/: client.rs  server.rs
src/authentication/oauth2/: api.rs  hashcodes.rs  mod.rs  refresh.rs  wrapper.rs
src/callback/: client.rs  server.rs
src/communication/: client.rs  mod.rs  server.rs
src/database/: interface.rs  mod.rs  sql.rs
src/directories/: create.rs
src/error/: mod.rs
src/frontend/: application.rs  colour.rs  message.rs  mod.rs
src/frontend/control_application/: application.rs  message.rs
src/frontend/display_application/: application.rs  message.rs
src/frontend/pages/: browse_album.rs  mod.rs  new_album.rs  photo_display.rs  select_album.rs
src/frontend/widgets/: album_widget.rs  mod.rs  photo_widget.rs
src/oauth2/: api.rs  mod.rs  refresh.rs
src/onedrive/: api.rs  download.rs  get_album_children.rs  get_albums.rs  get_drive.rs  get_drives.rs  get_me.rs  mod.rs
src/util/: channel.rs
