[package]
name = "reflection"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
http-body-util = "*"
hyper-util = { version = "*", features = ["full"] }
async-channel = "2.5.0"
rand = "0.9.2"
open = "5.3.3"
base64 = "0.22.1"
sha2 = "0.10.9"
reqwest = { version ="0.13.1", features = ["form"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite-async = "0.1.0"
